--- a/Car Sales/README
+++ b/Car Sales/README
@@ -1,22 +1,19 @@
-What is Tableau ?
-Tableau software is one of the fastest growing data visualization tools which is currently being used in the Business intelligence industry.
-It is the best way to change or transform the raw set of data into an easily understandable format with zero technical skills and coding knowledge.
+# What is Tableau ?  
+
+Tableau software is one of the fastest growing data visualization tools which is currently being used in the Business intelligence industry.  
+It is the best way to change or transform the raw set of data into an easily understandable format with zero technical skills and coding knowledge.   
 
 Tableau is basically a data visualization tool which provides pictorial and graphical representations of data.
 
-What is Tableau used for?
+## What is Tableau used for?  
+
 Usage of Tableau software are listed below:
 
-Tableau software is used to translate queries into visualization.
-It is also used for managing metadata.
-Tableau software imports data of all sizes and ranges.
-For a non-technical user, Tableau is a life saver as it offers the facility to create ‘no-code’ data queries.
-Ever since it was introduced, this data visualization tool is used for Business Intelligence industry. Organizations like Amazon, Walmart, Accenture, Lenovo, and so on widely use Tableau.
-
-
-They have given us csv files from which we have to create a Dashboard for his quick review so that he could take further decisions for the benefit of the company.
-
-Thus, we created below interactive dashboard as per his requirement. Now, he could switch and view different shipping stats for different months and years.
+- Tableau software is used to translate queries into visualization.  
+- It is also used for managing metadata.  
+- Tableau software imports data of all sizes and ranges.  
+- For a non-technical user, Tableau is a life saver as it offers the facility to create ‘no-code’ data queries.  
+- Ever since it was introduced, this data visualization tool is used for Business Intelligence industry. Organizations like Amazon, Walmart, Accenture, Lenovo, and so on widely use Tableau.  
 
 Car Sales Analytics
 
